# -MUD-Keyboards-Black-Gold-Taiwan-Election-MUD

./: .gitignore  00-game-architecture.md  政治危機事件設計與觸發機制.md  選舉結算公式、PvP 攻防與系統實作藍圖.md
server/: .env.example  .gitignore  alembic.ini  docker-compose.yml  extract.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2ef0ea037136_add_entity_name.py  7640d31c6554_add_line_user_id_and_line_display_name_.py  8a114ee1b0c9_add_line_user_id_and_line_display_name_.py
server/app/: __init__.py  config.py  main.py
server/app/ai/: __init__.py  settlement_engine.py
server/app/api/: line_auth.py
server/app/api_integrations/: __init__.py  news_scraper.py  news_sentiment.py  twse.py  weather.py
server/app/core/: security.py
server/app/data/: corporations.json  crises.py  narratives.py  npc_db.py  politicians.json
server/app/db/: session.py
server/app/engine/: __init__.py  combat.py  crisis_engine.py  events.py  penalties.py  settlement.py  tick.py
server/app/game/: __init__.py  commands.py  economy.py  menu_actions.py  session.py  world.py
server/app/models/: __init__.py  character.py  entity.py  events.py  party.py  schema.py
server/app/repository/: __init__.py  async_repo.py  entity_repo.py
server/static/: manifest.json  sw.js
server/static/css/: game.css
server/templates/: index.html  intro.html  offline.html
server/tests/: test_combat.py  test_commands.py  test_crisis_engine.py  test_entity_model.py  test_penalties.py  test_settlement.py  test_tick_engine.py  test_ws_manager.py
server/tools/: generate_politicians.py
(+10 files in other folders)
